# docs/swagger.json
@@ -52,6 +52,56 @@
                 }
             }
         },
+        "/nonce/{wallet}": {
+            "get": {
+                "description": "Get Sign Nonce",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Nonce"
+                ],
+                "summary": "Get Sign Nonce",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User wallet address",
+                        "name": "wallet",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.S"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/service_routes.GetNonceResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.E"
+                        }
+                    }
+                }
+            }
+        },
         "/pool-transfers/deposits/{wallet}": {
             "get": {
                 "description": "Get Deposits By Wallet",
@@ -307,6 +357,59 @@
                     }
                 }
             }
+        },
+        "/user/{wallet}/avatar": {
+            "put": {
+                "description": "Update User Avatar [SIGN]",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update User Avatar [SIGN]",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "iQxX3slnRg",
+                        "description": "An authorization header",
+                        "name": "X-MORPH",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User wallet address",
+                        "name": "wallet",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Body with image",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.S"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.E"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -465,6 +568,14 @@
                 },
                 "datetime": {
                     "type": "string"
+                }
+            }
+        },
+        "service_routes.GetNonceResponse": {
+            "type": "object",
+            "properties": {
+                "nonce": {
+                    "type": "integer"
                 }
             }
         },
