# internal/services/routes/user.go
@@ -5,22 +5,26 @@ import (
 	"dex-trades-parser/pkg/response"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"path/filepath"
+	"strings"
 )
 
 type UserRoutes struct {
 	Context *RoutesContext
 }
 
-// @Description Update User Avatar
-// @Summary Update User Avatar
+// @Description Update User Avatar [SIGN]
+// @Summary Update User Avatar [SIGN]
 // @Tags User
 // @Accept  json
 // @Produce  json
-// @Param   wallet path string true "User wallet address"
+// @Param X-MORPH header string true "An authorization header" default(iQxX3slnRg)
+// @Param wallet path string true "User wallet address"
+// @Param file formData file true "Body with image"
 // @Success 200 {object} response.S{}
 // @Failure 400 {object} response.E
-// @Router /user/{wallet}/avatar [post]
-func (p *UserRoutes) PostAvatarUpdate(c *gin.Context) {
+// @Router /user/{wallet}/avatar [put]
+func (p *UserRoutes) PutAvatarUpdate(c *gin.Context) {
 	if helpers.IsValidAddress(c.Param("wallet")) == false {
 		response.Error(c, http.StatusBadRequest, response.E{
 			Code:    response.InvalidJSONBody,
@@ -28,9 +32,34 @@ func (p *UserRoutes) PostAvatarUpdate(c *gin.Context) {
 		})
 		return
 	}
+	wallet := strings.ToLower(c.Param("wallet"))
 
-	//walletAdr := strings.ToLower(c.Param("wallet"))
+	file, err := c.FormFile("file")
+	if err != nil {
+		response.Error(c, http.StatusBadRequest, response.E{
+			Code:    response.InvalidRequest,
+			Message: "invalid FormFile",
+		})
+		return
+	}
 
+	path, err := filepath.Abs("public/avatars/"+wallet+".png")
+	if err != nil {
+		response.Error(c, http.StatusBadRequest, response.E{
+			Code:    response.InvalidRequest,
+			Message: "invalid filepath",
+		})
+		return
+	}
+
+	err = c.SaveUploadedFile(file, path)
+	if err != nil {
+		response.Error(c, http.StatusBadRequest, response.E{
+			Code:    response.InvalidRequest,
+			Message: "invalid Save Uploaded File",
+		})
+		return
+	}
 
 	response.Success(c, http.StatusOK, response.S{})
 
